Toolbar implementation, updated WeXplorer with fixed clipping.

--- a/XbimModelPortal/Content/xbrowser-styles.css
+++ b/XbimModelPortal/Content/xbrowser-styles.css
@@ -162,6 +162,17 @@
     bottom: 20px;
     left: 240px;
 }
+
+ #toolbar {
+        padding: 4px;
+        display: inline-block;
+        position: absolute;
+        z-index: 5;
+        left: 420px;
+        top: 10px;
+        height: 30px;
+    }
+
 /* ************************ Overrides ************************ */
 .ui-widget{
     font-size: 0.8em;
